# beautiful-grid

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
docs/: CompetitorAnalysis.md  Ideas.md  Market-Research.md  PRD.md  Roadmap.md
src/: App.tsx  index.css  main.tsx
src-tauri/: .clippy.toml  Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: analyze.rs  export.rs  import.rs  mod.rs  project.rs
src-tauri/src/image/: color.rs  mod.rs  thumbs.rs
src-tauri/src/project/: io.rs  mod.rs  model.rs
src/components/: NavBar.tsx  ProgressBar.tsx  SupportModal.tsx  ThumbnailGrid.tsx  WelcomeModal.tsx
src/config/: donate.ts
src/hooks/: useImport.ts
src/lib/: tauri-commands.ts
src/pages/: ExportPage.tsx  GridPage.tsx  LibraryPage.tsx
src/store/: appStore.ts
src/types/: index.ts
