[package]
name = "beautiful-grid"
version = "0.1.0"
description = "Desktop app for composing photo grids with auto color sorting"
authors = ["Aleksei Rudovich <rudovich.aleksei@gmail.com>"]
edition = "2021"

# lib-крейт нужен, чтобы main.rs вызывал run() из lib.rs (стандарт Tauri v2)
[lib]
name = "beautiful_grid_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
