[package]
name = "beautiful-grid"
version = "0.1.0"
description = "Desktop app for composing photo grids with auto color sorting"
authors = ["Aleksei Rudovich <rudovich.aleksei@gmail.com>"]
edition = "2021"

# lib-крейт нужен, чтобы main.rs вызывал run() из lib.rs (стандарт Tauri v2)
[lib]
name = "beautiful_grid_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
rayon = "1"

[dev-dependencies]
tempfile = "3"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
